<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Fragment.AddEditBookFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:textColor="@color/black"
            android:layout_toEndOf="@+id/back"
            android:fontFamily="@font/poppins"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:text="@string/addBooks"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/_5sdp"
        android:layout_margin="@dimen/_5sdp"
        android:layout_below="@+id/top"
        android:backgroundTint="@color/white"
        app:cardElevation="@dimen/_8sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/form_bg"
                android:fontFamily="@font/poppins"
                android:hint="@string/title"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:hint="@string/author"
                android:padding="@dimen/_5sdp"
                android:textSize="20sp"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColorHint="@color/hint_color"
                android:textColor="@color/black"
                android:background="@drawable/form_bg"
                android:layout_below="@id/title"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/poppins"
                android:id="@+id/author"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:layout_below="@id/author"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/form_bg"
                android:fontFamily="@font/poppins"
                android:gravity="top"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:hint="@string/description"
                android:maxLines="100"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="20sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:gravity="end"
                android:layout_marginTop="@dimen/_20sdp">

                <LinearLayout
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:gravity="center"
                    android:id="@+id/cancel"
                    android:background="@drawable/cancel_drawbale">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/cancel"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:gravity="center"
                    android:id="@+id/save"
                    android:layout_toEndOf="@+id/cancel"
                    android:background="@drawable/save_drawable">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins"
                        android:padding="@dimen/_8sdp"
                        android:id="@+id/saveLabel"
                        android:text="@string/save"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>