<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.BookDetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/bookDetailsHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:textColor="@color/black"
            android:layout_toEndOf="@+id/back"
            android:fontFamily="@font/poppins"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:text="@string/bookDetails"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/_5sdp"
        android:layout_margin="@dimen/_5sdp"
        android:layout_below="@+id/top"
        android:backgroundTint="@color/white"
        app:cardElevation="@dimen/_8sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/_8sdp"
                android:id="@+id/bookCover">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:src="@drawable/books_ico"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:id="@+id/infoLayout"
                android:layout_below="@+id/bookCover">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_name"
                    android:textSize="@dimen/_16sdp"
                    android:id="@+id/bookName"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/publisherLayout"
                    android:layout_below="@+id/bookName">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/publisher_name"
                        android:textSize="@dimen/_10sdp"
                        android:id="@+id/publisherNameLabel"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/black"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:textSize="@dimen/_10sdp"
                        android:fontFamily="@font/poppins"
                        android:paddingStart="@dimen/_2sdp"
                        android:paddingEnd="@dimen/_2sdp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/publisher_name"
                        android:textSize="@dimen/_10sdp"
                        android:id="@+id/publisherName"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/black"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/publisherLayout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/publish_year"
                        android:textSize="@dimen/_8sdp"
                        android:id="@+id/yearLabel"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/currentYear"
                        android:textSize="@dimen/_8sdp"
                        android:id="@+id/year"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"/>

                </LinearLayout>


            </RelativeLayout>

            <TextView
                android:id="@+id/bookDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/infoLayout"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:fontFamily="@font/poppins"
                android:paddingStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:paddingEnd="@dimen/_5sdp"
                android:text="@string/bookDetails"
                android:textSize="@dimen/_8sdp" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>