<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_2sdp"
    android:elevation="@dimen/_20sdp"
    app:cardCornerRadius="@dimen/_5sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/book"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/add_background">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:visibility="gone"
            android:id="@+id/imageContainer">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                android:backgroundTint="@color/white"
                android:layout_margin="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/bookCover"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/books_ico" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/content">

            <TextView
                android:id="@+id/bookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:paddingStart="@dimen/_2sdp"
                android:text="@string/book_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <RelativeLayout
                android:id="@+id/publisherLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bookName"
                android:background="@drawable/publisher_background">

                <TextView
                    android:id="@+id/publisherName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/publisher_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/publisherYearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/publisherLayout"
                android:layout_marginStart="@dimen/_2sdp"
                android:padding="@dimen/_2sdp">

                <TextView
                    android:id="@+id/publishYearLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/publish_year"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/publishYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/publishYearLabel"
                    android:fontFamily="@font/poppins_light"
                    android:text="2024"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/actionContainer">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                android:backgroundTint="@color/white"
                android:id="@+id/edit"
                android:layout_margin="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/editIcon"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/edit" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_toEndOf="@+id/edit"
                android:id="@+id/remove"
                android:backgroundTint="@color/white"
                android:layout_margin="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/removeIcon"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/remove" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
